# medixio-ai

./: .gitignore  .windsurfrules  README.md  database.py  database_setup.py  main.py  medixio.db  medixio_erd.mermaid  pyproject.toml  requirements.txt
requirements/: 00_general.md  01_appointments.md  02_medication.md
routes/: appointment_reminder_routes.py  appointment_routes.py  medication_reminder_routes.py  medicine_routes.py  user_routes.py
services/: appointment_reminder_service.py  appointment_service.py  medication_reminder_service.py  medicine_service.py  user_service.py
